src/components/billing/order/styles.scss
@import "../../../styles/_mixins";
@import "../../../styles/_variables";

.order {
  display: flex;
  @include displayFlex(flex-start, flex-start, column);
  flex: 1 1 auto;
  height: 100%;

  &__history {
    @include displayFlex(flex-start, flex-start, column);
    gap: 16px;
    margin: 0 0 50px 0;

    &__title {
      color: $bold-text;
      font-size: 16px;
      font-weight: 700;
    }

    &__subtitle {
      color: $text;
      font-size: 14px;
      font-weight: 500;
    }
  }

  &__table {
    margin: 0 0 16px 0;
    width: 100%;

    thead {
      width: 100%;

      tr {
        text-align: left;
        th {
          color: $text;
          font-size: 14px;
          font-weight: 500;
        }
      }
    }

    tbody {
      width: 100%;

      tr {
        border-radius: 8px;

        &:nth-child(2) {
          box-shadow: 0px 8px 19px rgba(223.37, 223.37, 252.88, 0.6);
        }

        td {
          color: $bold-text;
          font-size: 16px;
          font-weight: 500;

          button {
            @include btnReset;
            border: 1px solid $purple;
            border-radius: 8px;
            padding: 8px 16px;
            color: $bold-text;
            font-size: 16px;
            font-weight: 500;
          }
        }
      }
    }
  }

  &__load {
    margin: 0 0 81px 0;

    &__text {
      @include btnReset;
      color: $red;
      font-size: 16px;
      font-weight: 500;
      text-decoration: underline;
    }
  }

  &__payment {
    @include displayFlex(flex-start, flex-start, column);
    gap: 14px;
    margin: 0 0 22px 0;

    &__title {
      color: $bold-text;
      font-size: 16px;
      font-weight: 700;
    }

    &__subtitle {
      color: $text;
      font-size: 14px;
      font-weight: 500;
    }
  }

  &__card {
    @include displayFlex(space-between, center);
    width: 100%;

    &__info {
      @include displayFlex(flex-start, center);
      gap: 16px;

      &__img {
        padding: 10px;
        border: 1px solid $purple;
        border-radius: 6px;
        width: 57px;
        height: 32px;

        img {
          border-radius: 6px;
          width: 57px;
          height: 32px;
        }
      }

      &__text {
        color: $bold-text;
        font-size: 16px;
        font-weight: 500;
      }
    }

    &__btn {
      @include btnReset;
      color: $bold-text;
      font-size: 16px;
      font-weight: 500;
      padding: 8px 16px;
      border-radius: 8px;
      border: 1px solid $purple;
    }
  }
}

